# fitconnect-backend

./: .coderabbit.yaml  .env.example  .gitignore  API_ENDPOINTS.md  CHANGELOG_JOB_POSTING_ENUMS.md  README.md  VECTOR_CREATION_GUIDE.md  alembic.ini  app.pid  audit.md  docker-compose.yml  mock_data_for_matching_test.md  pyproject.toml  swagger_test_data.md
.github/: pull_request_template.md
alembic/: env.py  script.py.mako
alembic/versions/: 20240927120000_init_tables.py  20250929093000_charset_utf8mb4.py  20251003090000_add_companies_and_job_postings.py  20251003110000_drop_company_profiles.py  20251005093000_update_education_status_enum.py  20251005094500_update_company_size_enum.py  20251006001500_add_position_to_job_postings.py  20251007090000_create_job_posting_and_talent_cards.py  20251007090500_merge_heads_after_card_tables.py  20251007100000_allow_multiple_job_posting_cards.py  20251007113000_add_duration_years_to_experiences.py  20251007113000_add_duration_years_to_experiences.py.bak  20251008100000_create_matching_vectors_table.py  20251009110000_add_embedding_tables.py  20251017000000_update_job_posting_enums.py  20251018000000_add_email_to_talent_profiles.py  (+19 more)
app/: main.py
scripts/: MOCK_DATA_GUIDE.md  README_MOCK_DATA.md  create_mock_data.sh  manual_mock_data_guide.md  seed_mock_data.py  test_company_public_api.sh
tests/: conftest.py  test_embedding_sync_service.py  test_embedding_validation.py  test_embeddings_models.py  test_match_service.py  test_matching_vector_api.py  test_scoring.py  test_vector_matching_service.py  test_vector_repo.py
(+58 files in other folders)
