[tool.poetry]
name = "fitconnect-backend"
version = "0.1.0"
description = ""
authors = ["jaylions <jaylions@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = ">=2.0"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
passlib = ">=1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
pymysql = "^1.1.2"
email-validator = "^2.3.0"
bcrypt = "4.1.3"


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.5"
pytest = "^8.4.2"
httpx = "^0.28.1"
ruff = "^0.13.2"
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
